
icon:plus[] REST: The `webroot` endpoint will now set the `Cache-Control` header to `public` if the requested node can be read using the anonymous role. Otherwise the header will be set to `private`. This information is useful if you want to use a Caching Proxy in-between Gentics Mesh and your front-end application.

icon:check[] Core: Performance of loading nodes has been improved.

[[v0.36.5]]
== 0.36.5 (10.07.2019)

icon:plus[] Upload: The `upload.parser` config setting and `MESH_BINARY_DOCUMENT_PARSER` environment variable can be used to control whether uploads should be parsed to extract metadata and contents. Uploads will be parsed by default.

icon:plus[] Search: The `search.includeBinaryFields` config setting and `MESH_ELASTICSEARCH_INCLUDE_BINARY_FIELDS` environment variable can be used to control whether binary field metadata and plain text content should be added to the search index. By default metadata and content will be added to the search index.

icon:plus[] REST: A core library for JSON support (jackson) has been updated.

icon:plus[] GraphQL: The performance when loading nodes via the schema field has been improved.

icon:plus[] Core: Various internal calls have been improved to increase read performance.

icon:check[] Search: Fixed root cause of unnecessary full sync which could occur during schema migrations.

[[v0.36.4]]
== 0.36.4 (05.07.2019)

icon:check[] GraphQL: Fixed a bug that caused an error when filtering a node from a schema context that has no content in the default language.

icon:plus[] Graph: The `storage.synchronizeWrites` config setting and `MESH_GRAPH_SYNC_WRITES` environment variable can be used to control whether write operations should be executed synchronously. By default write operations are handled asynchronously.

icon:check[] Core: Performance of schema migration has been improved.

[[v0.36.3]]
== 0.36.3 (04.07.2019)
